# NaiveFS

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
scripts/: 4096B.file  bench_fio.sh  clear.sh  docker_test.sh  format.sh  linux_test.sh  test.sh  test_basic.out  test_basic.sh  test_large.sh  test_persistence.out  test_persistence.sh  test_random  test_random.cpp  test_seg.sh
src/: main.cpp  vfs.hpp
src/nfs/: config.hpp  direntry.cpp  direntry.hpp  disk.hpp  disk_inode.hpp  fd.hpp  id.hpp  imap.hpp  inode.hpp  inode_manager.hpp  nfs.hpp  seg.hpp  utils.hpp
